Extend ROLLCOMPILER value that was local to src/llvm to remainder of build. Resolves APS-162.

--- a/src/Makefile
+++ b/src/Makefile
@@ -65,5 +65,6 @@ default:
 
 copyright pkg rpm clean::
 	for i in $(SRCDIRS); do \
+	  (cd $$i && $(MAKE) ROLLCOMPILER="$(ROLLCOMPILER)" ROLLPY="$(ROLLPY)" $@) || exit 2; \
 	  (cd $$i && $(MAKE) $@) || exit 2; \
 	done
